# WeaverTemplate

./: .clang-tidy  .gitignore  CHANGELOG.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  build.bat  build.sh  create_installer.bat  create_installer.sh  profile.bat  profile.sh  project_settings.cmake  run.bat  run.sh  run_tests.bat  run_tests.sh  run_workflow.bat  run_workflow.sh
assets/icons/: icon.icns
docs/: APPLICATION_ICONS.md  CORE_DOCUMENTATION.md  NEW_DEPENDENCY_SETUP.md  PACKAGING.md  PROJECT_STRUCTURE.md
packaging/: CMakeLists.txt  Description.txt.in  Welcome.txt.in
scripts/: build-core.bat  build-core.sh  create_installer-core.bat  create_installer-core.sh  pre-commit.bat  run-core.bat  run-core.sh  run_tests-core.bat  run_tests-core.sh
src/: CMakeLists.txt
src/App/: CMakeLists.txt  Weaver.desktop.in  WeaverInterface.cpp  icon.rc
src/Core/: CMakeLists.txt  Canvas.cpp  Canvas.h  EntryPoint.cpp  EntryPoint.h  FileLogSink.cpp  FileLogSink.h  FunctionPreprocessor.h  IconsMaterialDesign.h  Image.cpp  Image.h  Layer.h  Log.cpp  Log.h  LogStatusCodes.h  MathTest.h  Random.cpp  Random.h  Themes.cpp  Themes.h  Timer.h
src/Core/Common/: Settings.h
src/Core/Input/: Input.cpp  Input.h  KeyCodes.h
tests/: CMakeLists.txt  test_main.cpp  test_math.cpp
