# --------------------------------------------------------------------------
# SECTION: Source Code Organization
# --------------------------------------------------------------------------
# This file organizes the source code by including the subdirectories
# containing the application and core logic.

add_subdirectory(App)
add_subdirectory(Core)